# ddpm-from-scratch

./: .gitignore  Hythem_suu.py  README.md  pyproject.toml
notebooks/: ddpm-from-scratch.ipynb
scripts/: sample.py  train.py
src/ddpm/datasets/: cifar10.py
src/ddpm/diffusion/: losses.py  reverse_process.py  sampler.py  schedules.py
src/ddpm/models/: unet.py
src/ddpm/models/blocks/: attention_block.py  down_block.py  downsample.py  residual_block.py  up_block.py  upsample.py
src/ddpm/models/embeddings/: sinusoidal_time_embedding.py  timestep_mlp.py
src/ddpm/nn/: attention.py
src/ddpm/trainers/: trainer.py
src/ddpm/utils/: checkpoint.py  metrics.py  seed.py
tests/dataset/: test_cifar10.py  test_cifar10_folder.py  test_transformers.py
tests/diffusion/: test_forward_process.py  test_losses.py  test_reverse_process.py  test_sampler.py  test_schedule.py
tests/models/: test_attention.py  test_downblock.py  test_downsample.py  test_resblock.py  test_time_embedding.py  test_timestep_mlp.py  test_unet.py  test_upblock.py  test_upsample.py
tests/nn/: suuu.py  test_attention.py  test_conv.py  test_dropout.py  test_groupnorm.py  test_linear.py  test_sequential.py
tests/trainers/: test_trainer.py
tests/utils/: metric_fid.py  test_checkpoint.py  test_metric.py  test_seed.py
