[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ddpm"
version = "0.1.0"
description = "DDPM (Denoising Diffusion Probabilistic Models) built from scratch in PyTorch"
authors = [{ name = "Wajdi" }]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "numpy",
    "pyyaml",
    "tqdm",
    "matplotlib"
]

[tool.setuptools.packages.find]
where = ["src"]
